@@ -3,6 +3,7 @@
 	- q3cstring removed
 	- q3textbrowser replaced by qtextbrowser
 	- display content file pattern info if deabug info is enabled
+	- q3frame replaced by qframe
 
 17. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- handle files larger than 1tb fixed
